--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <!--========== News ==========-->
         <section class="news section bd-container" id="news">
-            <h2 class="section-title">Our News</h2>
+            <h2 class="section-title">Mesa Staff</h2>
             <div class="news__container bd-grid">
                 <div class="news__content">
                     <h3 class="news__title">Custom Website Design</h3>
