--- a/index.html
+++ b/index.html
@@ -113,6 +113,27 @@
                         did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say
                         there are no perfect men.</p>
                 </div>
+                <div class="news__content">
+                    <h3 class="news__title">SEO &amp; SEM services</h3>
+                    <p class="news__description">II don't think they tried to market it to the billionaire, spelunking,
+                        base-jumping crowd. i
+                        did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say
+                        there are no perfect men.</p>
+                </div>
+                <div class="news__content">
+                    <h3 class="news__title">SEO &amp; SEM services</h3>
+                    <p class="news__description">II don't think they tried to market it to the billionaire, spelunking,
+                        base-jumping crowd. i
+                        did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say
+                        there are no perfect men.</p>
+                </div>
+                <div class="news__content">
+                    <h3 class="news__title">SEO &amp; SEM services</h3>
+                    <p class="news__description">II don't think they tried to market it to the billionaire, spelunking,
+                        base-jumping crowd. i
+                        did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say
+                        there are no perfect men.</p>
+                </div>
             </div>
         </section>
 
