--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <div class="news__container bd-grid">
                 <div class="news__content">
                     <h3 class="news__title">Custom Website Design</h3>
+                    <img src="assets/img/campus.jpg" alt="" class="home__img">
                     <p class="news__description">I don't think they tried to market it to the billionaire, spelunking,
                         base-jumping crowd. i
                         did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say
@@ -108,6 +109,7 @@
                 </div>
                 <div class="news__content">
                     <h3 class="news__title">SEO &amp; SEM services</h3>
+                    
                     <p class="news__description">II don't think they tried to market it to the billionaire, spelunking,
                         base-jumping crowd. i
                         did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say
