--- a/index.html
+++ b/index.html
@@ -86,55 +86,33 @@
             <h2 class="section-title">Mesa Staff</h2>
             <div class="news__container bd-grid">
                 <div class="news__content">
-                    <h3 class="news__title">Custom Website Design</h3>
-                    <img src="assets/img/campus.jpg" alt="" class="home__img">
-                    <p class="news__description">I don't think they tried to market it to the billionaire, spelunking,
-                        base-jumping crowd. i
-                        did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say
-                        there are no perfect men.</p>
+                    <h3 class="news__title">Bart</h3>
+                    <img src="assets/img/cafe_night_picture.jpg" alt="" class="home__img">
+                    <p class="news__description">Description</p>
                 </div>
                 <div class="news__content">
-                    <h3 class="news__title">Wordpress Integration</h3>
-                    <p class="news__description">I don't think they tried to market it to the billionaire, spelunking,
-                        base-jumping crowd. i
-                        did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say
-                        there are no perfect men.</p>
+                    <h3 class="news__title">Jordi</h3>
+                    <p class="news__description">Description</p>
                 </div>
                 <div class="news__content">
-                    <h3 class="news__title">Application Development</h3>
-                    <p class="news__description">I don't think they tried to market it to the billionaire, spelunking,
-                        base-jumping crowd. i
-                        did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say
-                        there are no perfect men.</p>
+                    <h3 class="news__title">Sam Hunt</h3>
+                    <p class="news__description">Description</p>
                 </div>
                 <div class="news__content">
-                    <h3 class="news__title">SEO &amp; SEM services</h3>
-                    
-                    <p class="news__description">II don't think they tried to market it to the billionaire, spelunking,
-                        base-jumping crowd. i
-                        did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say
-                        there are no perfect men.</p>
+                    <h3 class="news__title">Name</h3>
+                    <p class="news__description">Description.</p>
                 </div>
                 <div class="news__content">
-                    <h3 class="news__title">SEO &amp; SEM services</h3>
-                    <p class="news__description">II don't think they tried to market it to the billionaire, spelunking,
-                        base-jumping crowd. i
-                        did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say
-                        there are no perfect men.</p>
+                    <h3 class="news__title">Name</h3>
+                    <p class="news__description">Description.</p>
                 </div>
                 <div class="news__content">
-                    <h3 class="news__title">SEO &amp; SEM services</h3>
-                    <p class="news__description">II don't think they tried to market it to the billionaire, spelunking,
-                        base-jumping crowd. i
-                        did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say
-                        there are no perfect men.</p>
+                    <h3 class="news__title">Name</h3>
+                    <p class="news__description">Description.</p>
                 </div>
                 <div class="news__content">
-                    <h3 class="news__title">SEO &amp; SEM services</h3>
-                    <p class="news__description">II don't think they tried to market it to the billionaire, spelunking,
-                        base-jumping crowd. i
-                        did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say
-                        there are no perfect men.</p>
+                    <h3 class="news__title">Name</h3>
+                    <p class="news__description">Description.</p>
                 </div>
             </div>
         </section>
