--- a/index.html
+++ b/index.html
@@ -92,26 +92,31 @@
                 </div>
                 <div class="news__content">
                     <h3 class="news__title">Jordi</h3>
+                    <img src="assets/img/cafe_night_picture.jpg" alt="" class="home__img">
                     <p class="news__description">Description</p>
                 </div>
                 <div class="news__content">
                     <h3 class="news__title">Sam Hunt</h3>
+                    <img src="assets/img/cafe_night_picture.jpg" alt="" class="home__img">
                     <p class="news__description">Description</p>
                 </div>
                 <div class="news__content">
                     <h3 class="news__title">Name</h3>
+                    <img src="assets/img/cafe_night_picture.jpg" alt="" class="home__img">
                     <p class="news__description">Description.</p>
                 </div>
                 <div class="news__content">
                     <h3 class="news__title">Name</h3>
+                    <img src="assets/img/cafe_night_picture.jpg" alt="" class="home__img">
                     <p class="news__description">Description.</p>
                 </div>
                 <div class="news__content">
                     <h3 class="news__title">Name</h3>
+                    <img src="assets/img/cafe_night_picture.jpg" alt="" class="home__img">
                     <p class="news__description">Description.</p>
                 </div>
                 <div class="news__content">
-                    <h3 class="news__title">Name</h3>
+                    <h3 class="news__title">Name</h3><img src="assets/img/cafe_night_picture.jpg" alt="" class="home__img">
                     <p class="news__description">Description.</p>
                 </div>
             </div>
