--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <!--========== News ==========-->
         <section class="news section bd-container" id="news">
-            <h2 class="section-title">Mesa Staff</h2>
+            <h2 class="section-title">Mensa Staff</h2>
             <div class="news__container bd-grid">
                 <div class="news__content">
                     <h3 class="news__title">Bart</h3>
@@ -124,14 +124,14 @@
 
         <!--========== services ==========-->
         <section class="services section bd-container" id="services">
-            <span class="section-subtitle">offering</span>
-            <h2 class="section-title">our timetable</h2>
+            <span class="section-subtitle">this week's</span>
+            <h2 class="section-title">menu</h2>
 
             <div class="services__container  bd-grid">
                 <div class="services__content">
                     <i class="fas fa-utensils fa-2x"></i>
                     <h3 class="services__title">Breakfast</h3>
-                    <p class="services__description">Description</p>
+                    <p class="services__description">from 7:30 to 8:20</p>
                 </div>
 
                 <div class="services__content">
@@ -143,7 +143,7 @@
                     </defs>
                     </svg>
                     <h3 class="services__title">Lunch</h3>
-                    <p class="services__description">Description</p>
+                    <p class="services__description">from 12:30 to 13:20</p>
                 </div>
 
                 <div class="services__content">
@@ -156,7 +156,7 @@
                     </defs>
                     </svg>
                     <h3 class="services__title">Dinner</h3>
-                    <p class="services__description">Description</p>
+                    <p class="services__description">from 17:45 to 19:00</p>
                 </div>
             </div>
         </section>
