--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <!--========== HEADER ==========-->
     <header class="l-header" id="header">
         <nav class="nav bd-container">
-            <a href="menu.html" class="nav__logo">Mensa Menu</a>
+            <a href="menu.html" class="nav__logo">Monthly Menu</a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link">Videos</a></li>
-                    <li class="nav__item"><a href="#news" class="nav__link">News</a></li>
-                    <li class="nav__item"><a href="#services" class="nav__link">Timetable</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link">Tutorials</a></li>
+                    <li class="nav__item"><a href="#news" class="nav__link">Staff</a></li>
+                    <li class="nav__item"><a href="#services" class="nav__link">Menu</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
                     <li class="nav__item"><a href="https://uwcmaastricht.nl" class="nav__link">UWCM Website</a></li>
 
