--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <div class="services__container  bd-grid">
                 <div class="services__content">
-                    <i class="fas fa-utensils fa-2x"></i>
+                    <i class="fas fa-utensils fa-2x" href = "assets/img/cafe_night_picture.jpg"></i>
                     <h3 class="services__title">Breakfast</h3>
                     <p class="services__description">from 7:30 to 8:20</p>
                 </div>
