--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
         </section>
 
-        <!--========== services ==========-->
+        <!--========== Menu ==========-->
         <section class="services section bd-container" id="services">
             <span class="section-subtitle">this week's</span>
             <h2 class="section-title">menu</h2>
@@ -130,7 +130,7 @@
             <div class="services__container  bd-grid">
                 <div class="services__content">
                     <i class="fas fa-utensils fa-2x" href = "assets/img/cafe_night_picture.jpg"></i>
-                    <h3 class="services__title">Breakfast</h3>
+                    <h3 class="services__title" href = "assets/img/cafe_night_picture.jpg">Breakfast</h3>
                     <p class="services__description">from 7:30 to 8:20</p>
                 </div>
 
