--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <div class="services__container  bd-grid">
                 <div class="services__content">
-                    <i class="fas fa-utensils fa-2x" href = "assets/img/cafe_night_picture.jpg"></i>
+                    <a <i class="fas fa-utensils fa-2x"  href="assets/img/cafe_night_picture.jpg">> </i></a> 
                     <h3 class="services__title" href = "assets/img/cafe_night_picture.jpg">Breakfast</h3>
                     <p class="services__description">from 7:30 to 8:20</p>
                 </div>
