--- a/index.html
+++ b/index.html
@@ -129,7 +129,13 @@
 
             <div class="services__container  bd-grid">
                 <div class="services__content">
-                    <a href="assets/img/cafe_night_picture.jpg"><i class="fas fa-utensils fa-2x"  > </i></a>
+                    <a class="services_link" href="assets/img/cafe_night_picture.jpg"><i class="fas fa-utensils fa-2x"  > </i></a>
+                    <defs>
+                        <clipPath id="clip0">
+                            <rect width="64" height="64" fill="white" />
+                        </clipPath>
+                    </defs>
+                    </svg>
                     <a href="assets/img/cafe_night_picture.jpg"><h3 class="services__title" >Breakfast</h3></a>
                     <p class="services__description">from 7:30 to 8:20</p>
                 </div>
