--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="services__content">
-                    <i class="fas fa-pizza-slice fa-2x"></i>
+                    <a class="services_link" href="assets/img/cafe_night_picture.jpg"><i class="fas fa-pizza-slice fa-2x"></i></a>
                     <defs>
                         <clipPath id="clip0">
                             <rect width="64" height="64" fill="white" />
@@ -153,7 +153,7 @@
                 </div>
 
                 <div class="services__content">
-                    <i class="fas fa-hamburger fa-2x"></i>
+                    <a class="services_link" href="assets/img/cafe_night_picture.jpg"><i class="fas fa-hamburger fa-2x"></i></a>
 
                     <defs>
                         <clipPath id="clip0">
