--- a/index.html
+++ b/index.html
@@ -236,10 +236,12 @@
                 <h3 class="footer__title">information</h3>
                 <ul>
 
-                    <li><a href="#home" class="nav__link active-link">Home</a></li>
-                    <li><a href="#about" class="nav__link">About</a></li>
-                    <li><a href="#services" class="nav__link">Timetable</a></li>
-                    <li><a href="#contact" class="nav__link">Contact us</a></li>
+                    <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link">Tutorials</a></li>
+                    <li class="nav__item"><a href="#news" class="nav__link">Staff</a></li>
+                    <li class="nav__item"><a href="#services" class="nav__link">Menu</a></li>
+                    <li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
+                    
                 </ul>
             </div>
 
