--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <img src="assets/img/Staff/staff3.png" alt="" class="home__img">
                     <p class="news__description">Description.</p>
                 </div>
-                
+
                 <div class="news__content">
                     <h3 class="news__title">Caitlyn Cakiroglu</h3>
                     <img src="assets/img/Staff/staff4.png" alt="" class="home__img">
@@ -137,22 +137,22 @@
 
             <div class="services__container  bd-grid">
                 <div class="services__content">
-                    <!-- CAMBIAR AQUIIII-->
-                    <a class="services_link" href="assets/img/cafe_night_picture.jpg"><i class="fas fa-utensils fa-2x"  > </i></a>
+                    <!-- CAMBIAR AQUIIII    1-->
+                    <a class="services_link" href="assets/img/menu_pic/Cycle 1/Week 1/Cycle 1 Week 1 Breakfast 2022.png"><i class="fas fa-utensils fa-2x"  > </i></a>
                     <defs>
                         <clipPath id="clip0">
                             <rect width="64" height="64" fill="white" />
                         </clipPath>
                     </defs>
                     </svg>
-                    <!-- CAMBIAR AQUIIII-->
-                    <a href="assets/img/cafe_night_picture.jpg"><h3 class="services__title" >Breakfast</h3></a>
+                    <!-- CAMBIAR AQUIIII   1-->
+                    <a href="assets/img/menu_pic/Cycle 1/Week 1/Cycle 1 Week 1 Breakfast 2022.png"><h3 class="services__title" >Breakfast</h3></a>
                     <p class="services__description">from 7:30 to 8:20</p>
                 </div>
 
                 <div class="services__content">
                     <!-- CAMBIAR AQUIIII-->
-                    <a class="services_link" href="assets/img/cafe_night_picture.jpg"><i class="fas fa-pizza-slice fa-2x"></i></a>
+                    <a class="services_link" href="assets/img/menu_pic/Cycle 1/Week 1/Cycle 1 Week 1 Lunch 2022.png"><i class="fas fa-pizza-slice fa-2x"></i></a>
                     <defs>
                         <clipPath id="clip0">
                             <rect width="64" height="64" fill="white" />
@@ -160,13 +160,13 @@
                     </defs>
                     </svg>
                     <!-- CAMBIAR AQUIIII-->
-                    <a href="assets/img/cafe_night_picture.jpg"><h3 class="services__title" >Lunch</h3></a>
+                    <a href="assets/img/menu_pic/Cycle 1/Week 1/Cycle 1 Week 1 Lunch 2022.png"><h3 class="services__title" >Lunch</h3></a>
                     <p class="services__description">from 12:30 to 13:20</p>
                 </div>
 
                 <div class="services__content">
                     <!-- CAMBIAR AQUIIII-->
-                    <a class="services_link" href="assets/img/cafe_night_picture.jpg"><i class="fas fa-hamburger fa-2x"></i></a>
+                    <a class="services_link" href="assets/img/menu_pic/Cycle 1/Week 1/Cycle 1 Week 1 Dinner 2022.png"><i class="fas fa-hamburger fa-2x"></i></a>
 
                     <defs>
                         <clipPath id="clip0">
@@ -175,7 +175,7 @@
                     </defs>
                     </svg>
                     <!-- CAMBIAR AQUIIII-->
-                    <a href="assets/img/cafe_night_picture.jpg"><h3 class="services__title" >Dinner</h3></a>
+                    <a href="assets/img/menu_pic/Cycle 1/Week 1/Cycle 1 Week 1 Dinner 2022.png"><h3 class="services__title" >Dinner</h3></a>
                     <p class="services__description">from 17:45 to 19:00</p>
                 </div>
             </div>
