--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="news__content">
                     <h3 class="news__title">Ellen Goverde</h3>
-                    <img src="assets/img/Staff/staff7.png" alt="" class="home__img">
+                    <img src="assets/img/Staff/staff7.1.jpg" alt="" class="home__img">
                     <p class="news__description">Description.</p>
                 </div>
                 <div class="news__content">
