--- a/index.html
+++ b/index.html
@@ -85,47 +85,48 @@
         <section class="news section bd-container" id="news">
             <h2 class="section-title">Mensa Staff</h2>
             <div class="news__container bd-grid">
+
                 <div class="news__content">
                     <h3 class="news__title">Bart Crombach</h3>
                     <img src="assets/img/Staff/bart.png" alt="" class="home__img">
-                    <p class="news__description">Description</p>
+
                 </div>
                 <div class="news__content">
                     <h3 class="news__title">Jordi Hees</h3>
                     <img src="assets/img/Staff/staff5.png" alt="" class="home__img">
-                    <p class="news__description">Description</p>
+
                 </div>
                 <div class="news__content">
                     <h3 class="news__title">Kaloyan Asenov</h3>
-                    <img src="assets/img/Staff/staff2.png"" class="home__img">
-                    <p class="news__description">Description</p>
+                    <img src="assets/img/Staff/staff2.png" class="home__img">
+
                 </div>
                 <div class="news__content">
                     <h3 class="news__title">Ellen Goverde</h3>
                     <img src="assets/img/Staff/staff7.1.jpg" alt="" class="home__img">
-                    <p class="news__description">Description.</p>
+
                 </div>
                 <div class="news__content">
                     <h3 class="news__title">Jan Willem Bisselink </h3>
                     <img src="assets/img/Staff/staff1.png" alt="" class="home__img">
-                    <p class="news__description">Description.</p>
+
                 </div>
                 <div class="news__content">
                     <h3 class="news__title">Fé Bisselink</h3>
                     <img src="assets/img/Staff/staff3.png" alt="" class="home__img">
-                    <p class="news__description">Description.</p>
+
                 </div>
 
                 <div class="news__content">
                     <h3 class="news__title">Caitlyn Cakiroglu</h3>
                     <img src="assets/img/Staff/staff4.png" alt="" class="home__img">
-                    <p class="news__description">Description.</p>
+
                 </div>
 
                 <div class="news__content">
                     <h3 class="news__title">Leila Busari</h3>
                     <img src="assets/img/Staff/staff6.png" alt="" class="home__img">
-                    <p class="news__description">Description.</p>
+
                 </div>
             </div>
         </section>
