--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                     <span class="section-subtitle about__initial">Useful Videos</span>
                     <h2 class="section-title about__initial">Some helpful<br>for a better mensa</h2>
                     <ul class="about__description">
-                        <li class="list_videos"> <a class="nav__link" href="assets/img/cafe_night_picture.jpg"> Video on how to do x</a></li>
-                        <li class="list_videos"> <a class="nav__link" href="test.png"> Video on how to do x </a></li>
-                        <li class="list_videos"> <a class="nav__link" href="test.png"> Video on how to do x </a></li>
-                        <li class="list_videos"> <a class="nav__link" href="test.png"> Video on how to do x </a></li>
+                        <li class="list_videos"> <a class="nav__link" href="assets/vids/Clean_tray.mp4"> How to clean your own tray</a></li>
+                        <li class="list_videos"> <a class="nav__link" href="test.png"> How to clean the trays and floor [Mensa Duty] </a></li>
+                        <li class="list_videos"> <a class="nav__link" href="test.png"> How to clean the bins[Mensa Duty]</a></li>
+                        <li class="list_videos"> <a class="nav__link" href="test.png"> Finshing mensa duty[Mensa Duty] </a></li>
 
                     </ul>
 
