--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                     <h2 class="section-title about__initial">Some helpful<br>for a better mensa</h2>
                     <ul class="about__description">
                         <li class="list_videos"> <a class="nav__link" href="assets/vids/Clean_tray.mp4"> How to clean your own tray</a></li>
-                        <li class="list_videos"> <a class="nav__link" href="test.png"> How to clean the trays and floor [Mensa Duty] </a></li>
-                        <li class="list_videos"> <a class="nav__link" href="test.png"> How to clean the bins[Mensa Duty]</a></li>
-                        <li class="list_videos"> <a class="nav__link" href="test.png"> Finshing mensa duty[Mensa Duty] </a></li>
+                        <li class="list_videos"> <a class="nav__link" href="assets/vids/Mensa_Duty_Cleaning_trays.mp4"> How to clean the trays and floor [Mensa Duty] </a></li>
+                        <li class="list_videos"> <a class="nav__link" href="assets/vids/Mensa_duty_bins.mp4"> How to clean the bins[Mensa Duty]</a></li>
+                        <li class="list_videos"> <a class="nav__link" href="assets/vids/Mensa_duty_finishing.mp4"> Finshing mensa duty[Mensa Duty] </a></li>
 
                     </ul>
 
