--- a/menu.html
+++ b/menu.html
@@ -104,7 +104,7 @@
         <!--========== Cycle One Week One ==========-->
 
   <div class="menu-item">
-    <div class="menu-item-name">      Week One         </div>
+    <div class="menu-item-name">      Week One [ 6 - 12 September]    </div>
       
 
         <div class="text">
@@ -138,7 +138,7 @@
           </div>
 
         <div class="text">
-            <a data-fancybox="gallery" href="assets/img/menu_pic/Cycle 1/Week 2/Daily Fresh - Cycle 1 Week 2 Lunch 2022_00001.png">
+            <a data-fancybox="gallery" href="assets/img/menu_pic/Cycle 1/Week 2/Daily Fresh - Cycle 1 Week 2 Lunch 2022 (4).png">
               Lunch
             </a>
         </div>
