--- a/menu.html
+++ b/menu.html
@@ -101,7 +101,7 @@
             menu
         </h2>
 
-        <!--========== Cycle One Week One ==========-->
+        <!--========== Cycle One Week One ==========
 
   <div class="menu-item">
     <div class="menu-item-name">      Week One [ 6 - 12 September]    </div>
@@ -174,7 +174,7 @@
         </a>
       </div>
   </div>
-                <!--========== Cycle Two Week One ==========-->
+                -========== Cycle Two Week One ==========
 
   <div class="menu-item">
     
@@ -198,7 +198,7 @@
           </a>
       </div>
   </div>
-                 <!-- --========== Week 5 ========== -->
+                 - --========== Week 5 ========== -->
 
   <div class="menu-item">
       
