--- a/menu.html
+++ b/menu.html
@@ -126,7 +126,7 @@
       </div>
 
   </div>
-            <!--========== Cycle One Week Two ==========-->
+            ========== Cycle One Week Two ==========-
 
   <div class="menu-item">
     <div class="menu-item-name">   Week Two [ 12 - 18 September ]        </div>
@@ -150,7 +150,7 @@
         </div>
   </div>
 
-              <!--========== Cycle One Week Three ==========-->
+              <!--========== Cycle One Week Three ==========
  
   <div class="menu-item">
       
