--- a/menu.html
+++ b/menu.html
@@ -132,19 +132,19 @@
     <div class="menu-item-name">   Week Two [ 16 - 22 January ]        </div>
         
         <div class="text">
-            <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/~$ily Fresh - Cycle 1 Week 9 Breakfast 2022.pdf">
+            <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/Week 9 Breakfast 2023.pdf">
                   Breakfast
               </a>
           </div>
 
         <div class="text">
-            <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/~$ily Fresh - Cycle 1 Week 9 Lunch 2022.pdf">
+            <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/Week 9 Lunch 2023.pdf">
               Lunch
             </a>
         </div>
 
         <div class="text">
-            <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/~$ily Fresh - Cycle 1 Week 9 Dinner 2022.pdf">
+            <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/Week 9 Dinner 2023.pdf">
               Dinner
           </a>
         </div>
