--- a/menu.html
+++ b/menu.html
@@ -276,7 +276,7 @@
 
   </div>
 
-                  <!--========== Week 8 ========== -->
+                  <!--========== Week 8 ========== -
 
   <div class="menu-item">
       
@@ -303,7 +303,7 @@
   </div>
 
 
-        <!--========== Week 9 ========== -->
+        -========== Week 9 ========== 
 
   <div class="menu-item">
       <div class="menu-item-name">    Week Nine  [ 31 - 6 November]       </div>
@@ -327,7 +327,7 @@
       </div>
 
   </div>
-      
+  -->    
 
 </div>
 
