Correction of week 7 menu changed nomenclature

--- a/menu.html
+++ b/menu.html
@@ -101,10 +101,37 @@
             menu
         </h2>
 
+      <!--========== Week Seven ==========-->
+
+
+      <div class="menu-item">
+
+          <div class="menu-item-name">    This week @ Mensa   [ 13 - 19 March]   </div>
+
+          <div class="text">
+              <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/~$ily%20Fresh%20-%20Cycle%201%20Week%207%20Breakfast%202022.pdf">
+                  Breakfast
+              </a>
+          </div>
+
+          <div class="text">
+              <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/~$ily%20Fresh%20-%20Cycle%201%20Week%207%20Lunch%202022.pdf">
+                  Lunch
+              </a>
+          </div>
+
+          <div class="text">
+              <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/~$ily%20Fresh%20-%20Cycle%201%20Week%207%20Dinner%202022.pdf">
+                  Dinner
+              </a>
+          </div>
+
+      </div>
+
         <!--========== Cycle One Week One ==========-->
 
   <div class="menu-item">
-    <div class="menu-item-name">      Week One [ 20 - 27 March ]    </div>
+    <div class="menu-item-name">      Next week: 8 [ 13 - 19 March ]    </div>
       
 
         <div class="text">
