Update for week 8

--- a/menu.html
+++ b/menu.html
@@ -52,7 +52,7 @@
    .menu-item-price{
      float: right;
      font-weight: bold;
-     font-family: arial;
+     font-family: arial, sans-serif;
      margin-top: -22px;
 
 
@@ -73,7 +73,7 @@
 </style>
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -101,37 +101,11 @@
             menu
         </h2>
 
-      <!--========== Week Seven ==========-->
-
-
-      <div class="menu-item">
-
-          <div class="menu-item-name">    This week @ Mensa   [ 13 - 19 March]   </div>
-
-          <div class="text">
-              <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/~$ily%20Fresh%20-%20Cycle%201%20Week%207%20Breakfast%202022.pdf">
-                  Breakfast
-              </a>
-          </div>
-
-          <div class="text">
-              <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/~$ily%20Fresh%20-%20Cycle%201%20Week%207%20Lunch%202022.pdf">
-                  Lunch
-              </a>
-          </div>
-
-          <div class="text">
-              <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/~$ily%20Fresh%20-%20Cycle%201%20Week%207%20Dinner%202022.pdf">
-                  Dinner
-              </a>
-          </div>
-
-      </div>
 
         <!--========== Cycle One Week One ==========-->
 
   <div class="menu-item">
-    <div class="menu-item-name">      Next week: 8 [ 13 - 19 March ]    </div>
+    <div class="menu-item-name">      This week: 8 [ 20 - 26 March ]    </div>
       
 
         <div class="text">
