Update for week 8

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </svg>
                     <!-- CAMBIAR AQUIIII-->
                     <a ><h3 class="services__title" >Lunch</h3></a>
-                    <p class="services__description">from 12:30 to 13:20</p>
+                    <p class="services__description">from 11:45 to 12:30</p>
                 </div>
 
                 <div class="services__content">
@@ -195,8 +195,7 @@
 
                     <span class="section-subtitle cafe_night__initial">Cafe Night</span>
 
-                    <h2 class="section-title cafe_night__initial">coming soon..</h2>
-
+                    <h2 class="section-title cafe_night__initial">Applications are open for the Café Night team!</h2>
 
 
                     <p class="cafe_night__description">Cafe Night will be coming soon! Stay tuned!</p>
@@ -215,7 +214,7 @@
                     </div>
 
                     <div class="contact__button">
-                        <a href="mailto:chan.aung@uwcmaastricht.nl" class="button">Contact Us Now</a>
+                        <a href="mailto:mensateam@uwcmaastricht.nl" class="button">Contact Us Now</a>
                     </div>
                 </div>
             </section>
