--- a/menu.html
+++ b/menu.html
@@ -130,7 +130,7 @@
            <!-- ========== Cycle One Week Two ==========-->
 
   <div class="menu-item">
-    <div class="menu-item-name">   Week Two [ 28 - 3 April]        </div>
+    <div class="menu-item-name">  Next week: 9 [ 27 Mar - 2 Apr]        </div>
         
         <div class="text">
             <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/Week 9 Breakfast 2023.pdf">
