Update for week 8

--- a/menu.html
+++ b/menu.html
@@ -102,7 +102,7 @@
         </h2>
 
 
-        <!--========== Cycle One Week One ==========-->
+        <!--========== Cycle One Week One ==========
 
   <div class="menu-item">
     <div class="menu-item-name">      This week: 8 [ 20 - 26 March ]    </div>
@@ -127,10 +127,11 @@
       </div>
 
   </div>
+  -->
            <!-- ========== Cycle One Week Two ==========-->
 
   <div class="menu-item">
-    <div class="menu-item-name">  Next week: 9 [ 27 Mar - 2 Apr]        </div>
+    <div class="menu-item-name">  This week: 9 [ 27 Mar - 2 Apr]        </div>
         
         <div class="text">
             <a data-fancybox="gallery" href="assets/img/menu_pic/week5-9/Week 9 Breakfast 2023.pdf">
@@ -331,6 +332,7 @@
   -->    
 
 </div>
+
 
 </html>
 
